<resources>
    <string name="dialog_logout">Are your sure you want to Log out ?, You may cancel.</string>
    <string name="app_name">Desapoint</string>
    <string name="hint">category</string>
    <string name="label">search</string>
    <string name="profileMenuTitle">Profile</string>
    <string name="copyrights">\u00a9 2017 Desapoint.com</string>
    <string name="about_message">Desapoint , digital material access point for University students.</string>
    <string name="version_title">technology preview</string>
    <string name="about_menu">About</string>
    <string name="LoginTitle">LOGIN</string>
    <string name="spinner_hint">select university</string>
    <string name="settings">Settings</string>
    <string name="article_message">Enjoy reading articles posted by your fellow colleague or your course instructors</string>
    <string name="book_message">Download and Books shared by different members of desapoint platform</string>
    <string name="forgot"><u>Forgot password</u></string>
    <string name="password">password</string>
    <string name="username">Username</string>
    <string name="login_button_name">LOGIN</string>
    <string name="aboutMenu">About</string>
    <string name="rateMenu">Rate us</string>
    <string name="feedBackMenu">Feedback</string>
    <string name="shareMenu">Invite friends</string>
    <string name="create">create account</string>
    <string name="phone">Phone: +255659814742</string>
    <string name="email">info@desapoint.com</string>
    <string name="dumy_short_text">It is a long established fact that a reader will be distracted by the readable content of a page</string>
    <string name="profile_description">This pannel is provided with user private information. You can change your personal information by accessing each attribute of your detail. this consist profile picture where your can upload profile picture by clicking on the button , Remember to click save after you have made all changes on your detail.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_trial">trial</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>