<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/settings"
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always"
        />
    <item android:id="@+id/profile"
        android:icon="@drawable/ic_action_name"
        android:title="@string/profileMenuTitle"
        app:showAsAction="ifRoom"
        />
    <item
        android:title="@string/feedBackMenu"
        android:id="@+id/feedBackMenu"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/aboutMenu"
        android:title="@string/aboutMenu"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/shareMenu"
        android:title="@string/shareMenu"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/rateUsMenu"
        android:title="@string/rateMenu"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/logOut"
        android:title="LogOut"
        android:icon="@drawable/ic_exit_to_app"
        app:showAsAction="never"
        />
</menu>