<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pattern"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">


            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/about_top_rectangle"
                android:orientation="vertical">

                <TextView
                    android:textSize="32sp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="6dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />

                <TextView
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="technology preview (release)" />

                <TextView
                    android:textSize="16sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Desapoint development Team" />

                <TextView
                    android:textSize="24sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Contact" />

                <TextView
                    android:textSize="12sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/phone" />

                <TextView
                    android:textSize="12sp"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/email" />

                <TextView
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Copyrights" />

                <TextView
                    android:textSize="12sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/copyrights" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:background="@drawable/about_bottom_rectangle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:gravity="center"
                    android:text="About back to school vector graphic"
                    android:background="@drawable/rounded_rect"
                    android:layout_marginTop="12dp"/>
                <TextView
                    android:layout_width="273dp"
                    android:layout_margin="12dp"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="The displayed vector graphic on the background of desapoint app is Created by Olga_spb - Freepik.com."
                    />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
