<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingTop="36dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/bghome"
    android:baselineAligned="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="12dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="36dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginBottom="0dp"
            android:text="Desapoint"
            />

        <ImageView
            android:layout_marginTop="16dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_lock"
            android:fontFamily="sans-serif-light"
            android:layout_marginBottom="0dp"
            android:text="Desapoint"
            />

    </LinearLayout>

    <!-- fields container-->
    <LinearLayout
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginBottom="6dp"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="8dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_action_name"
                android:gravity="center"/>
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColorHint="@android:color/white"
                android:layout_margin="4dp"
                android:textColor="@color/white"
                android:padding="10dp"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:background="@android:color/transparent"
                android:imeActionId="@+id/login"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="2dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:background="@android:color/black"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="8dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_action_key"
                android:gravity="center"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@android:color/white"
                android:layout_margin="4dp"
                android:textColor="@color/white"
                android:padding="10dp"
                android:fontFamily="sans-serif-light"
                android:inputType="textPassword"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:background="@android:color/transparent"
                android:imeActionId="@+id/login"
                android:singleLine="true" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/sign_in_button"
            android:background="#5cb85c"
            android:imeOptions="actionDone"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_margin="12dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/login_button_name"
                android:imeOptions="actionDone"
                android:fontFamily="sans-serif-light"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/create_account"
            android:layout_marginTop="4dp"
            android:background="#428bca"
            android:imeOptions="actionDone"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_margin="12dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:text="REGISTER"
                android:imeOptions="actionDone"
                android:fontFamily="sans-serif-light"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:id="@+id/login_progress"
            android:layout_below="@+id/button6"
            android:layout_marginBottom="16dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp" />

    </LinearLayout>

    <!-- forgot password or register -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="bottom|right"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="6dp"
        android:layout_alignParentBottom="true">
        <!--android:background="#81C784"-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:gravity="right|bottom"
            android:background="@android:color/transparent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                android:id="@+id/forgot"
                android:gravity="right"
                android:layout_gravity="right|bottom"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif-light"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

